--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -1,12 +1,12 @@
 ---
 title: "[WIP] Church Bells are Not Ringing: Decrease in the Opposite-Sex and Same-Sex Couples Opting for Religous Marriage Ceremonies in England and Wales"
-subtitle: "Analysis and Comparitive Study of Marriage Ceremony Type (Civil and Religious) for Opposite-Sex (1970 to 2020) and Same-Sex (2016 to 2020) Couples "
+subtitle: "Analysis and Comparative Study of Marriage Ceremony Type (Civil and Religious) for Opposite-Sex (1970 to 2020) and Same-Sex (2016 to 2020) Couples "
 author: 
   - Francesca Ye
 thanks: "Code and data are available at: https://github.com/Francesca-Ye/marriage_ceremonies_religion"
 date: today
 date-format: long
-abstract: "This paper invesitgates the annual number of marriage conducted in England and Wales based on ceremony type which encompasses civil or relgious in addition to the different types of religous denominations (Church of England, Roman Catholic, etc) recorded the by the Office of National Statistics. Based on the data set, these trends between 1970 to 2020 were analyzed for opposite-sex couples and between 2016 to 2020 for same-sex couples in tandem with comparitive study on differences in preference between couple type. Analysis found that religious ceremonies have been overtaken by civil ceremonies as the predominant ceremony type for opposite-sex couples whilst same-sex couples have always preferred civil ceremonies since the recording of their data. Considering larger social changes and the prevalance of individual religiosity, the results of this paper appear to indicate that religion is becoming less of an inetgral facet of life in England and Wales based on religion becoming less synonymous with marriage."
+abstract: "This paper investigates the annual number of marriage conducted in England and Wales based on ceremony type recorded the by the Office of National Statistics. Based on the data set, these trends between 1970 to 2020 were analyzed for opposite-sex couples and between 2016 to 2020 for same-sex couples in tandem with comparative study on couple type preferences. Analysis found that civil ceremonies have overtake civil cermonies as the predominant ceremony type for both couple types. The results of this paper indicate that religion is becoming less of an inetgral facet of life in England and Wales based on religion becoming less synonymous with marriage."
 format: pdf
 number-sections: true
 toc: true
@@ -36,22 +36,33 @@ In the United Kingdom, there has been increasing research and attention towards 
 
 Despite the overall decline in religiosity, there are also generational differences in religious belief; as noted in the United Kingdom where only 48% of Baby Boomers expressed a belief in God in comparison to Gen Z at 37% [@ukreligion]. These generational differences and societal changes can be examined through data on marriage pertaining to the annual number of civil and religious ceremonies conducted. Although there is a degree of separation between civil and religious marriage, the practice has held heavy religious significance historically. Therefore, the types of marriage ceremonies people are opting for can serve as a representation of the overall religiosity of a country depending on the number of citizens that continue to ascribe religious significance to the legal act of marriage [@marriagedeclineuk]. 
 
-This paper takes data from the Office for National Statistics in the United Kingdom from the 2020 edition of the Marriages in England and Wales data set to examine if the presence of religion in legal marriage has declined over time in tandem with answering if the result is difference between same and opposite sex couples. The estimand of interest is the presence of religion in consolidating a legal marriage. To examine whether or not religion in marriage has declined, graphical analysis was conducted to visualize the annual data on marriage ceremony type between 1970 to 2020 for opposite-sex couples and 2016 to 2020 for same-sex couples. Summary statistics were also calculated to get a greater idea of the numerical significance of religion in this space. This paper finds that religion in the context of marriage has declined over the years in addition to same-sex couples more strongly preferring civil ceremonies in comparison to opposite-sex couples. 
+This paper takes data from the **Office for National Statistics in the United Kingdom** from the 2020 edition of the "Marriages in England and Wales" data set to examine if the presence of religion in legal marriage has declined over time in tandem with answering if the result is difference between same and opposite sex couples. The estimand of interest is the presence of religion in consolidating a legal marriage. To examine whether or not religion in marriage has declined, graphical analysis was conducted to visualize the annual data on marriage ceremony type between 1970 to 2020 for opposite-sex couples and 2016 to 2020 for same-sex couples. Summary statistics were also calculated to get a greater idea of the numerical significance of religion in this space.
+
+This paper finds that religion in the context of marriage has declined over the years in addition to same-sex couples more strongly preferring civil ceremonies in comparison to opposite-sex couples. 
 
 [@sec-data] of this report aims to discuss the characteristics of the data set examined in addition to the methods of cleaning applied to get workable data for this report. This report’s [@sec-results] highlights trends discovered through graphical analysis in tandem with statistical analysis. [@sec-discussion] notes possible analytical limitations and measurement errors in the data sets in addition to overall insights of the report’s analysis. Specific discussion will surround the validity of using marriage as an indicator of religiosity in further detail. [@sec-future] aims to explore further research that could be conducted in this field based on the findings presented in this report.
 
 
 # Data {#sec-data}
-# Model
-## Model set-up
-### Model justification
-# Results {#sec-results}
+
+## Data Description
+The data sets for same and opposite-sex couples were derived from the *Office for National Statistics in the United Kingdom* with the 2020 edition of the “Marriages in England and Wales” workbook as raw data. This data is collected at the time a marriage is registered as part of civil registration which is a legal requirement in completing a legally recognized marriage in England and Wales. Annual marriage statistics are available to the public approximately two years after the end of the reference year [@statsguide]. Notably, same-sex couples that are currently in a civil partnership can have it converted to a marriage but these numbers are not counted towards the marriage statistics of same-sex couples in the workbook. 
+
+The data of this paper focuses on the ceremony statistics for both same and opposite-sex couples. For same-sex couples, the data set focuses on 2014-2020. The variables in this data set are `all_marriages` which represents the total amount of same-sex marriages conducted in a specific year, `all_civil` which represents all civil ceremonies conducted, `approved_civil` which represents all civil ceremonies conducted at premises with pre-approval, and `all_religious` which represents all religious ceremonies conducted. For same-sex couples, the number of male and female couples that marry in a year is also recorded. For opposite-sex couples, the data set focuses on 1970-2020 since there was a larger set of data available for analysis in comparison to same-sex couple data. The variables in this data set are `all_marriages` which represents the total amount of same-sex marriages conducted in a specific year, `all_civil` which represents all civil ceremonies conducted, `approved_civil` which represents all civil ceremonies conducted at premises with pre-approval, and `all_religious` which represents all religious ceremonies conducted. Religious ceremonies are further separated with annual ceremonies conducted in the Church of England, Roman Catholic churches, other Christian religions, and all other religions also recorded. 
+
+## Data Cleaning
+The data set was imported into RStudio where the open-source statistical programming language, R [@citeR], was used for cleaning and analysis.  Data was simulated with the functionalities of the `tibble` [@tibble] package. The raw data set was extracted and saved with the functionalities of the `readr` [@readr], `tidyverse` [@tidyverse], and `readxl` [@readxl] packages. Data cleaning was aided by the use of the `tidyverse` [@tidyverse], `janitor` [@janitor], `arrow` [@arrow], and `naniar` [@naniar] packages. To create tables and graphs for data visualization of the datasets, the `ggplot2` [@ggplot2] and `knitr` [@knitr] packages were used in tandem with `tinytex` [@tinytex] to create the paper format. 
+
+Generally, the data from the *National Office of Statistics* was taken without any modifications to most of the selected columns. The notable exception to this would be in the opposite-sex couple dataset where the `approved_civil` column had values of `[z]` and `[x]` in the `other_religions` column when no data was available for a specific year. Since this paper aimed to broadly look at a summary of religion in marriage ceremonies, these values were converted to 0s to continue calculating summary statistics for individual years. All of the values in both data sets were also converted from the character class to the numeric class which is a divergence from the original workbook produced by the *National Office of Statistics*. This decision was made to aid in calculating and graphing the data as there were no values that could not be converted to numeric aside from the two cases mentioned above. 
+
+## Opposite-Sex Civil versus Religious Ceremonies
 ```{r}
 #| message: false
 #| echo: false
 #| warning: false
 #| label: fig-oppositecivilvsreligious
-#| fig-cap: Annual Amount of Civil and Religious Ceremonies Between 1970 to 2020 in England and Wales for Opposite-Sex Couples
+#| fig-pos: "H"
+#| fig-cap: Annual Amount of Civil (Red) and Religious (Blue) Ceremonies Between 1970 to 2020 in England and Wales for Opposite-Sex Couples
 ggplot(opposite_sex, aes(x = year)) + 
   geom_line(aes(y = all_civil), color = "darkred") + 
   geom_line(aes(y = all_religious), color="steelblue")  +
@@ -60,6 +71,33 @@ ggplot(opposite_sex, aes(x = year)) +
   scale_y_continuous(breaks = seq(0, 300000, 20000))+
   labs(x = "Year", y = "Number of Ceremonies Conducted")
 ```
+
+As seen in @fig-oppositecivilvsreligious, the number of annual religious marriage ceremonies appears to have a clear downward trend from 1970 to 2020 which is contrasted by annual civil ceremonies that appear to have maintained somewhat more consistent levels throughout the 50 years. Interestingly, civil ceremonies were more popular than religious ceremonies between 1976 and 1980. However, from 1992, civil ceremonies were once again more popular and have consistently stayed ahead of religious ceremonies. After 1992, the gap between the amount of civil and religious ceremonies also appears to be exponentially widening as exemplified by 2015 where 17,6406 civil ceremonies were conducted in comparison to 6,2614 religious ceremonies. When solely viewing the annual total of religious and civil ceremonies conducted annually, it paints a clear picture of the decrease in religious marriage ceremonies. For both ceremony types, the decrease between 2019 and 2020 could be attributed to COVID-19-related lockdowns. 
+
+The average number of civil ceremonies conducted annually was 168,306.6 whilst the average for religious ceremonies was 130,945.3. Additionally, the medians were 168,897 and 127,522 respectively. The standard deviation for civil ceremonies was 17,601.7 and 59287.21 for religious ceremonies. Since the standard deviation of religious ceremonies is significantly higher, this corroborates the graph in supporting that the annual totals have had large variances whereas civil ceremonies have maintained a comparatively stable annual total. 
+
+## Same-Sex Civil versus Religious Ceremonies
+```{r}
+#| message: false
+#| echo: false
+#| warning: false
+#| label: fig-samecivilvsreligious
+#| fig-pos: "H"
+#| fig-cap: Annual Amount of Civil (Red) and Religious (Blue) Ceremonies Between 2014 and 2020 in England and Wales for Same-Sex Couples
+ggplot(same_sex, aes(x = year)) + 
+  geom_line(aes(y = all_civil), color = "darkred") + 
+  geom_line(aes(y = all_religious), color="steelblue")  +
+  theme_minimal() +
+  scale_x_continuous(breaks = seq(2014, 2020, 1)) +
+  scale_y_continuous(breaks = seq(0, 8000, 500))+
+  labs(x = "Year", y = "Number of Ceremonies Conducted")
+```
+
+As shown in @fig-samecivilvsreligious, the number of civil ceremonies has consistently been the more popular choice for ceremony type amongst same-sex couples since the legalization of same-sex marriage. Despite the smaller number of same-sex marriages in general, civil ceremonies make up an overwhelming majority of all marriages conducted annually. Although civil ceremonies are consistently the most popular, there does appear to be some slight year-over-year decrease that might have some significance; however, the decrease between 2019 and 2020 could be attributed to COVID-19-related lockdowns. Looking over the religious ceremonies, they have appeared to remain somewhat consistent with the exception of 2014 where only 17 ceremonies were conducted. Despite this, @fig-samecivilvsreligious highlights how civil ceremonies are the overwhelmingly popular choice for same-sex couples when selecting a marriage ceremony type. 
+
+For civil ceremonies, the average amount of annual ceremonies conducted was 6036.6 with a median of 6862. The average amount of annual religious ceremonies conducted was 46.4 with a median of 48. For standard deviations, civil ceremonies were 1815.576 and 18.48783 for religious ceremonies. In this instance, the larger variation in annual totals for civil ceremonies could be a result of the larger volume of ceremonies conducted. Since religious ceremonies conducted annually have consistently been in the double digits, the low standard deviation makes sense when viewing @fig-samecivilvsreligious as the line appears to be trending as an almost straight line. 
+
+# Results {#sec-results}
 
 # Discussion {#sec-discussion}
 ## First discussion point {#sec-first-point}
@@ -74,8 +112,6 @@ ggplot(opposite_sex, aes(x = year)) +
 # Appendix {-}
 
 # Additional data details
-
-# Model details {#sec-model-details}
 
 \newpage
 
