paper update - data section

--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -74,7 +74,7 @@ ggplot(opposite_sex, aes(x = year)) +
 
 As seen in @fig-oppositecivilvsreligious, the number of annual religious marriage ceremonies appears to have a clear downward trend from 1970 to 2020 which is contrasted by annual civil ceremonies that appear to have maintained somewhat more consistent levels throughout the 50 years. Interestingly, civil ceremonies were more popular than religious ceremonies between 1976 and 1980. However, from 1992, civil ceremonies were once again more popular and have consistently stayed ahead of religious ceremonies. After 1992, the gap between the amount of civil and religious ceremonies also appears to be exponentially widening as exemplified by 2015 where 17,6406 civil ceremonies were conducted in comparison to 6,2614 religious ceremonies. When solely viewing the annual total of religious and civil ceremonies conducted annually, it paints a clear picture of the decrease in religious marriage ceremonies. For both ceremony types, the decrease between 2019 and 2020 could be attributed to COVID-19-related lockdowns. 
 
-The average number of civil ceremonies conducted annually was 168,306.6 whilst the average for religious ceremonies was 130,945.3. Additionally, the medians were 168,897 and 127,522 respectively. The standard deviation for civil ceremonies was 17,601.7 and 59287.21 for religious ceremonies. Since the standard deviation of religious ceremonies is significantly higher, this corroborates the graph in supporting that the annual totals have had large variances whereas civil ceremonies have maintained a comparatively stable annual total. 
+The average number of civil ceremonies conducted annually was 168,306.6 whilst the average for religious ceremonies was 130,945.3. Additionally, the medians were 168,897 and 127,522 respectively. The standard deviation for civil ceremonies was 17,601.7 and 59287.21 for religious ceremonies. Since the standard deviation of religious ceremonies is significantly higher, this corroborates @fig-oppositecivilvsreligious in supporting that the annual totals have had large variances whereas civil ceremonies have maintained a comparatively stable annual total. 
 
 ## Same-Sex Civil versus Religious Ceremonies
 ```{r}
