--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -47,7 +47,7 @@ This paper finds that religion in the context of marriage has declined over the 
 # Data {#sec-data}
 
 ## Data Description
-The data sets for same and opposite-sex couples were derived from the *Office for National Statistics in the United Kingdom* with the 2020 edition of the “Marriages in England and Wales” workbook as raw data. This data is collected at the time a marriage is registered as part of civil registration which is a legal requirement in completing a legally recognized marriage in England and Wales. Annual marriage statistics are available to the public approximately two years after the end of the reference year [@statsguide]. Notably, same-sex couples that are currently in a civil partnership can have it converted to a marriage but these numbers are not counted towards the marriage statistics of same-sex couples in the workbook. 
+The data sets for same and opposite-sex couples were derived from the *Office for National Statistics in the United Kingdom* with the 2020 edition of the “Marriages in England and Wales” workbook as raw data. This data is collected at the time a marriage is registered as part of civil registration which is a legal requirement in completing a legally recognized marriage in England and Wales. Annual marriage statistics are available to the public approximately two years after the end of the reference year [@statsguide]. Notably, same-sex couples that are currently in a civil partnership can have it converted to a marriage but these numbers are not counted towards the marriage statistics of same-sex couples in the workbook. The data collected and used in this paper is used to measure the number of couples that opt for civil or religious marriage ceremonies on a yearly basis. By measuring marriage ceremony trends, it can help measure or provide insight onto greater social attitudes towards relgion.
 
 The data of this paper focuses on the ceremony statistics for both same and opposite-sex couples. For same-sex couples, the data set focuses on 2014-2020. The variables in this data set are `all_marriages` which represents the total amount of same-sex marriages conducted in a specific year, `all_civil` which represents all civil ceremonies conducted, `approved_civil` which represents all civil ceremonies conducted at premises with pre-approval, and `all_religious` which represents all religious ceremonies conducted. For same-sex couples, the number of male and female couples that marry in a year is also recorded. For opposite-sex couples, the data set focuses on 1970-2020 since there was a larger set of data available for analysis in comparison to same-sex couple data. The variables in this data set are `all_marriages` which represents the total amount of same-sex marriages conducted in a specific year, `all_civil` which represents all civil ceremonies conducted, `approved_civil` which represents all civil ceremonies conducted at premises with pre-approval, and `all_religious` which represents all religious ceremonies conducted. Religious ceremonies are further separated with annual ceremonies conducted in the Church of England, Roman Catholic churches, other Christian religions, and all other religions also recorded. 
 
