paper and references update

--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -37,7 +37,7 @@ In the United Kingdom, there has been increasing research and attention towards 
 
 Despite the overall decline in religiosity, there are also generational differences in religious belief; as noted in the United Kingdom where only 48% of Baby Boomers expressed a belief in God in comparison to Gen Z at 37% [@ukreligion]. These generational differences and societal changes can be examined through data on marriage pertaining to the annual number of civil and religious ceremonies conducted. Although there is a degree of separation between civil and religious marriage, the practice has held heavy religious significance historically. Therefore, the types of marriage ceremonies people are opting for can serve as a representation of the overall religiosity of a country depending on the number of citizens that continue to ascribe religious significance to the legal act of marriage [@marriagedeclineuk]. 
 
-This paper takes data from the **Office for National Statistics in the United Kingdom** from the 2020 edition of the "Marriages in England and Wales" data set to examine if the presence of religion in legal marriage has declined over time in tandem with answering if the result is difference between same and opposite sex couples. The estimand of interest is the presence of religion in consolidating a legal marriage. To examine whether or not religion in marriage has declined, graphical analysis was conducted to visualize the annual data on marriage ceremony type between 1970 to 2020 for opposite-sex couples and 2016 to 2020 for same-sex couples. Summary statistics were also calculated to get a greater idea of the numerical significance of religion in this space.
+This paper takes data from the *Office for National Statistics in the United Kingdom* from the 2020 edition of the "Marriages in England and Wales" data set to examine if the presence of religion in legal marriage has declined over time in tandem with answering if the result is difference between same and opposite sex couples. The estimand of interest is the presence of religion in consolidating a legal marriage. To examine whether or not religion in marriage has declined, graphical analysis was conducted to visualize the annual data on marriage ceremony type between 1970 to 2020 for opposite-sex couples and 2016 to 2020 for same-sex couples. Summary statistics were also calculated to get a greater idea of the numerical significance of religion in this space.
 
 This paper finds that religion in the context of marriage has declined over the years in addition to same-sex couples more strongly preferring civil ceremonies in comparison to opposite-sex couples. 
 
@@ -47,7 +47,7 @@ This paper finds that religion in the context of marriage has declined over the 
 # Data {#sec-data}
 
 ## Data Description
-The data sets for same and opposite-sex couples were derived from the *Office for National Statistics in the United Kingdom* with the 2020 edition of the “Marriages in England and Wales” workbook as raw data. This data is collected at the time a marriage is registered as part of civil registration which is a legal requirement in completing a legally recognized marriage in England and Wales. Annual marriage statistics are available to the public approximately two years after the end of the reference year [@statsguide]. Notably, same-sex couples that are currently in a civil partnership can have it converted to a marriage but these numbers are not counted towards the marriage statistics of same-sex couples in the workbook. The data collected and used in this paper is used to measure the number of couples that opt for civil or religious marriage ceremonies on a yearly basis. By measuring marriage ceremony trends, it can help measure or provide insight onto greater social attitudes towards relgion.
+The data sets for same and opposite-sex couples were derived from the *Office for National Statistics in the United Kingdom* with the 2020 edition of the “Marriages in England and Wales” workbook as raw data. This data is collected at the time a marriage is registered as part of civil registration which is a legal requirement in completing a legally recognized marriage in England and Wales. Annual marriage statistics are available to the public approximately two years after the end of the reference year [@statsguide]. Notably, same-sex couples that are currently in a civil partnership can have it converted to a marriage but these numbers are not counted towards the marriage statistics of same-sex couples in the workbook. The data collected and used in this paper is used to measure the number of couples that opt for civil or religious marriage ceremonies on a yearly basis [@statsguide]. By measuring marriage ceremony trends, it can help measure or provide insight onto greater social attitudes towards religion.
 
 The data of this paper focuses on the ceremony statistics for both same and opposite-sex couples. For same-sex couples, the data set focuses on 2014-2020. The variables in this data set are `all_marriages` which represents the total amount of same-sex marriages conducted in a specific year, `all_civil` which represents all civil ceremonies conducted, `approved_civil` which represents all civil ceremonies conducted at premises with pre-approval, and `all_religious` which represents all religious ceremonies conducted. For same-sex couples, the number of male and female couples that marry in a year is also recorded. For opposite-sex couples, the data set focuses on 1970-2020 since there was a larger set of data available for analysis in comparison to same-sex couple data. The variables in this data set are `all_marriages` which represents the total amount of same-sex marriages conducted in a specific year, `all_civil` which represents all civil ceremonies conducted, `approved_civil` which represents all civil ceremonies conducted at premises with pre-approval, and `all_religious` which represents all religious ceremonies conducted. Religious ceremonies are further separated with annual ceremonies conducted in the Church of England, Roman Catholic churches, other Christian religions, and all other religions also recorded. 
 
