--- a/paper/references.bib
+++ b/paper/references.bib
@@ -7,19 +7,125 @@
     url = {https://www.R-project.org/},
   }
   
- @book{ukreligion,
-title = "Lost faith? The UK{\textquoteright}s changing attitudes to religion",
-author = "Bobby Duffy and George May and David Voas and James Wright and Rozi Harsanyi and Kirstie Hewlett and Paul Stoneman",
-year = "2023",
-month = may,
-doi = "10.18742/pub01-134",
-language = "English",
-} 
+  @misc{marriagedeclineuk,
+    title = {Religious and civil marriages in Britain: changing trends and challenges of recognition},
+    author = {Katya Braginskaia},
+    url = {https://eurel.info/spip.php?article3728&lang=en},
+    year = {2020},
+    note = {Accessed March 11 2024},
+  }
 
-@misc{marriagedeclineuk,
-  title        = {Religious and civil marriages in Britain: changing trends and challenges of recognition},
-  author       = {Katya Braginskaia},
-  url = {https://eurel.info/spip.php?article3728&lang=en},
-  year         = {2020},
-  note         = {Accessed March 11 2024},
-}
+  @book{ukreligion,
+    title = "Lost faith? The UK{\textquoteright}s changing attitudes to religion",
+    author = "Bobby Duffy and George May and David Voas and James Wright and Rozi Harsanyi and     Kirstie Hewlett and Paul Stoneman",
+    year = "2023",
+    month = may,
+    doi = "10.18742/pub01-134",
+    language = "English",
+  } 
+
+  @Manual{janitor,
+    title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
+    author = {Sam Firke},
+    year = {2023},
+    note = {R package version 2.2.0},
+    url = {https://CRAN.R-project.org/package=janitor},
+  }
+  
+  @misc{statsguide,
+    title = {User guide to marriage statistics},
+    author = {Paula Guy},
+    url = {https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/marriagecohabitationandcivilpartnerships/methodologies/userguidetomarriagestatistics},
+    year = {2024},
+    note = {Accessed April 2 2024},
+  }
+
+  @Manual{arrow,
+    title = {arrow: Integration to 'Apache' 'Arrow'},
+    author = {Neal Richardson and Ian Cook and Nic Crane and Dewey Dunnington and Romain François and Jonathan Keane and Dragoș Moldovan-Grünfeld and Jeroen Ooms and Jacob Wujciak-Jens and {Apache Arrow}},
+    year = {2024},
+    note = {R package version 15.0.1},
+    url = {https://CRAN.R-project.org/package=arrow},
+  }
+
+  @Manual{tibble,
+    title = {tibble: Simple Data Frames},
+    author = {Kirill Müller and Hadley Wickham},
+    year = {2023},
+    note = {R package version 3.2.1},
+    url = {https://CRAN.R-project.org/package=tibble},
+  }
+
+  @Article{naniar,
+    title = {Expanding Tidy Data Principles to Facilitate Missing Data Exploration, Visualization and Assessment of Imputations},
+    author = {Nicholas Tierney and Dianne Cook},
+    journal = {Journal of Statistical Software},
+    year = {2023},
+    volume = {105},
+    number = {7},
+    pages = {1--31},
+    doi = {10.18637/jss.v105.i07},
+  }
+
+  @Book{ggplot2,
+    author = {Hadley Wickham},
+    title = {ggplot2: Elegant Graphics for Data Analysis},
+    publisher = {Springer-Verlag New York},
+    year = {2016},
+    isbn = {978-3-319-24277-4},
+    url = {https://ggplot2.tidyverse.org},
+  }
+  
+  @Article{tidyverse,
+    title = {Welcome to the {tidyverse}},
+    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+    year = {2019},
+    journal = {Journal of Open Source Software},
+    volume = {4},
+    number = {43},
+    pages = {1686},
+    doi = {10.21105/joss.01686},
+  }
+  
+  @Manual{readxl,
+    title = {readxl: Read Excel Files},
+    author = {Hadley Wickham and Jennifer Bryan},
+    year = {2023},
+    note = {R package version 1.4.3},
+    url = {https://CRAN.R-project.org/package=readxl},
+  }
+  
+  @Manual{readr,
+    title = {readr: Read Rectangular Text Data},
+    author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
+    year = {2023},
+    note = {R package version 2.1.4},
+    url = {https://CRAN.R-project.org/package=readr},
+  }
+
+  @Manual{tidyr,
+    title = {tidyr: Tidy Messy Data},
+    author = {Hadley Wickham and Davis Vaughan and Maximilian Girlich},
+    year = {2023},
+    note = {R package version 1.3.0},
+    url = {https://CRAN.R-project.org/package=tidyr},
+  }
+
+  @InCollection{knitr,
+    booktitle = {Implementing Reproducible Computational Research},
+    editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
+    title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
+    author = {Yihui Xie},
+    publisher = {Chapman and Hall/CRC},
+    year = {2014},
+    note = {ISBN 978-1466561595},
+  }
+  
+   @Manual{tinytex,
+    title = {tinytex: Helper Functions to Install and Maintain TeX
+      Live, and Compile LaTeX Documents},
+    author = {Yihui Xie},
+    year = {2023},
+    note = {R package version 0.49},
+    url = {https://github.com/rstudio/tinytex},
+  }
