paper and references update

--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -101,6 +101,7 @@ As shown in @fig-samecivilvsreligious, the number of civil ceremonies has consis
 For civil ceremonies, the average amount of annual ceremonies conducted was 6036.6 with a median of 6862. The average amount of annual religious ceremonies conducted was 46.4 with a median of 48. For standard deviations, civil ceremonies were 1815.576 and 18.48783 for religious ceremonies. In this instance, the larger variation in annual totals for civil ceremonies could be a result of the larger volume of ceremonies conducted. Since religious ceremonies conducted annually have consistently been in the double digits, the low standard deviation makes sense when viewing @fig-samecivilvsreligious as the line appears to be trending as an almost straight line. 
 
 # Results {#sec-results}
+Looking at the graphed data and summary statistics, there appears to be a clear decline in the number of opposite-sex couples opting for a religious ceremony across a fifty-year timeframe between 1970 and 2020. For same-sex couples, civil ceremonies have consistently and overwhelmingly been the most popular ceremony type since the legalization of same-sex marriage in 2014. The latter phenomenon is likely best explained by the relationship between religion and homophobia. Barbara Finlay and Carol S. Walter’s work in *Review of Religious Research* found that Protestants had the highest homophobia scores followed by Catholics, other Christian denominations, and other religions [@homophobiaresearch]. As same-sex religious ceremonies are conducted and approved by each religious authority [@statsguide], it could be possible that religious leaders do not approve of same-sex marriages. Another reason for the lack of same-sex religious ceremonies could also be non-heterosexual individuals moving away from religiosity due to conflicts between religious thought and their sexual identities. 
 
 ## Opposite-Sex Religious Ceremony Type
 ```{r}
@@ -109,7 +110,7 @@ For civil ceremonies, the average amount of annual ceremonies conducted was 6036
 #| warning: false
 #| label: fig-oppositereligioustype
 #| fig-pos: "H"
-#| fig-cap: Annual Amount of Church of England, Roman Catholic, Other Christian Denominations, and Other Relgion Ceremonies Conducted Between 1970 and 2020 in England and Wales for Opposite-Sex Couples
+#| fig-cap: Annual Amount of Church of England (Red), Roman Catholic (Blue), Other Christian Denominations (Green), and Other Relgion Ceremonies (Purple) Conducted Between 1970 and 2020 in England and Wales for Opposite-Sex Couples
 
 ggplot(opposite_sex, aes(x = year)) + 
   geom_line(aes(y = coe), color = "darkred") + 
