--- a/paper/references.bib
+++ b/paper/references.bib
@@ -23,7 +23,18 @@
     doi = "10.18742/pub01-134",
     language = "English",
   } 
-
+  
+  @Article{homophobiaresearch, 
+    title = {The Relation of Religious Affiliation, Service Attendance, and Other Factors to      Homophobic Attitudes among University Students}, 
+    author = {Barbara Finlay and Carol S. Walter}, 
+    journal = {Review of Religious Research}, 
+    year = {2003}, 
+    volume = {44}, 
+    number = {4}, 
+    pages = {370-393}, 
+    doi = {10.2307/3512216}, 
+  }
+  
   @Manual{janitor,
     title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
     author = {Sam Firke},
